--- a/src/main/resources/templates/guestbook/list.html
+++ b/src/main/resources/templates/guestbook/list.html
@@ -3,11 +3,88 @@
 
 <th:block th:replace="~{/layout/basic :: setContent(~{this::content} )}">
 
-
   <th:block th:fragment="content">
 
-    <h1>방명록 리스트 페이지(페이징, 다중검색)</h1>
+    <h1 class="mt-4">방명록</h1>
+      <span>
+        <a th:href="@{/guestbook/register}">
+          <button type="button" class="btn btn-outline-primary">방명록 작성</button>
+        </a>
+      </span>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Gno</th>
+        <th scope="col">Title</th>
+        <th scope="col">Regdate</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="dto : ${result.dtoList}"> <!--th:each 반복문! -->
+        <th scope="row">
+          <a th:href="@{/guestbook/read(gno = ${dto.gno}, page = ${result.page})}">
+            [[${dto.gno}]] <!--항목 번호에 대한 테이블 데이터-->
+          </a>
+        </th>
+        <td>[[${dto.title}]]</td>
+        <td>[[${dto.writer}]]</td>
+        <td>[[${#temporals.format(dto.regDate, 'yyyy/MM/dd')}]]</td> <!--포맷 설정-->
+      </tr>
+      </tbody>
+    </table>
+
+    <ul class="pagination h-100 justify-content-center align-items-center"> <!--방명록 페이지를 탐색하기 위한 페이징-->
+      <li class="page-item" th:if="${result.prev}"> <!--이전 페이지를 위한 페이징 아이템-->
+        <a class="page-link" th:href="@{/guestbook/list(page= ${result.start -1})}" tabindex="-1">Previous</a>
+      </li>
+
+      <li th:class=" 'page-item' + ${result.page == page?'active':''} "
+          th:each="page: ${result.pageList}">
+        <a class="page-link" th:href="@{/guestbook/list(page = ${page})}">
+          [[${page}]] <!--페이지 번호 표시-->
+        </a>
+      </li>
+
+      <li class="page-item" th:if="${result.next}"> <!--다음 페이지를 위한 페이징 아이템-->
+        <a class="page-link" th:href="@{/guestbook/list(page= ${result.end + 1})}">Next</a>
+      </li>
+    </ul>
+
+    <div class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <!--header-->
+          <div class="modal-header">
+            <h5 class="modal-title">Modal 알림</h5>
+            <button type="button" class="close" date-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <!--body-->
+          <div class="modal-body">
+            <p>완료하였습니다.</p>
+          </div>
+          <!--footer-->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script th:inline="javascript">
+      var msg = [[${msg}]];
+      console.log(msg);
+
+      if (msg) {
+        $(".modal").modal();
+      }
+
+    </script>
 
   </th:block>
 
 </th:block>
+</html>
