--- a/src/main/resources/templates/guestbook/list.html
+++ b/src/main/resources/templates/guestbook/list.html
@@ -5,25 +5,48 @@
 
   <th:block th:fragment="content">
 
-    <h1 class="mt-4">방명록</h1>
+    <h1 class="mt-4">방명록
       <span>
         <a th:href="@{/guestbook/register}">
           <button type="button" class="btn btn-outline-primary">방명록 작성</button>
         </a>
       </span>
+    </h1>
+
+    <form action="/guestbook/list" method="get" id="searchForm">
+      <div class="input-group">
+        <input type="hidden" name="page" value="1">
+        <div class="input-group-prepend">
+          <select class="custom-select" name="type">
+            <option th:selected="${pageRequestDTO.type == null}">-------</option>
+            <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+            <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+            <option value="w" th:selected="${pageRequestDTO.type == 'w'}">작성자</option>
+            <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목 + 내용</option>
+            <option value="tcw" th:selected="${pageRequestDTO.type == 'tcw'}">제목 + 내용 + 작성자</option>
+          </select>
+        </div>
+        <input class="form-control" name="keyword" th:value="${pageRequestDTO.keyword}">
+        <div class="input-group-append" id="button-addon4">
+          <button class="btn btn-outline-secondary btn-search" type="button">Search</button>
+          <button class="btn btn-outline-secondary btn-clear" type="button">Clean</button>
+        </div>
+      </div>
+    </form>
+
     <table class="table table-striped">
       <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Gno</th>
         <th scope="col">Title</th>
+        <th scope="col">Writer</th>
         <th scope="col">Regdate</th>
       </tr>
       </thead>
       <tbody>
       <tr th:each="dto : ${result.dtoList}"> <!--th:each 반복문! -->
         <th scope="row">
-          <a th:href="@{/guestbook/read(gno = ${dto.gno}, page = ${result.page})}">
+          <a th:href="@{/guestbook/read(gno = ${dto.gno}, page = ${result.page}, type = ${pageRequestDTO.type}, keyword = ${pageRequestDTO.keyword})}">
             [[${dto.gno}]] <!--항목 번호에 대한 테이블 데이터-->
           </a>
         </th>
@@ -36,18 +59,22 @@
 
     <ul class="pagination h-100 justify-content-center align-items-center"> <!--방명록 페이지를 탐색하기 위한 페이징-->
       <li class="page-item" th:if="${result.prev}"> <!--이전 페이지를 위한 페이징 아이템-->
-        <a class="page-link" th:href="@{/guestbook/list(page= ${result.start -1})}" tabindex="-1">Previous</a>
+        <a class="page-link" th:href="@{/guestbook/list(page= ${result.start -1},
+        type=${pageRequestDTO.type},
+        keyword = ${pageRequestDTO.keyword})}" tabindex="-1">Previous</a>
       </li>
 
       <li th:class=" 'page-item' + ${result.page == page?'active':''} "
           th:each="page: ${result.pageList}">
-        <a class="page-link" th:href="@{/guestbook/list(page = ${page})}">
+        <a class="page-link" th:href="@{/guestbook/list(page = ${page}, type=${pageRequestDTO.type}, keyword=${pageRequestDTO.keyword})}">
           [[${page}]] <!--페이지 번호 표시-->
         </a>
       </li>
 
       <li class="page-item" th:if="${result.next}"> <!--다음 페이지를 위한 페이징 아이템-->
-        <a class="page-link" th:href="@{/guestbook/list(page= ${result.end + 1})}">Next</a>
+        <a class="page-link" th:href="@{/guestbook/list(page= ${result.end + 1},
+        type= ${pageRequestDTO.type},
+        keyword= ${pageRequestDTO.keyword})}">Next</a>
       </li>
     </ul>
 
@@ -81,6 +108,15 @@
       if (msg) {
         $(".modal").modal();
       }
+
+      var searchForm = $("#searchForm");
+      $('.btn-search').click(function (e) {
+        searchForm.submit();
+      });
+
+      $('.btn-clear').click(function (e) {
+        searchForm.empty().submit();
+      });
 
     </script>
 
