--- a/src/main/resources/templates/guestbook/modify.html
+++ b/src/main/resources/templates/guestbook/modify.html
@@ -7,7 +7,13 @@
 
     <h1 class="mt-4">방명록 수정페이지</h1>
     <form action="/guestbook/modify" method="post">
-    <div class="form-group">
+
+      <!--페이지 번호-->
+      <input type="hidden" name="page" th:value="${requestDTO.page}">
+      <input type="hidden" name="type" th:value="${requestDTO.type}" >
+      <input type="hidden" name="keyword" th:value="${requestDTO.keyword}" >
+
+      <div class="form-group">
       <label>번호</label>
       <input type="text" class="form-control" name="gno" th:value="${dto.gno}" readonly> <!--읽기 전용-->
     </div>
@@ -51,6 +57,42 @@
             .attr("method", "post");
     actionForm.submit();
   });
+
+  $(".modifyBtn").click(function() {
+
+    if(!confirm("수정하시겠습니까?")){
+      return ;
+    }
+
+    actionForm
+            .attr("action", "/guestbook/modify")
+            .attr("method","post")
+            .submit();
+  });
+
+  $(".listBtn").click(function() {
+
+    //var pageInfo = $("input[name='page']");
+    var page = $("input[name='page']");
+    var type = $("input[name='type']");
+    var keyword = $("input[name='keyword']");
+
+    actionForm.empty(); //form 태그의 모든 내용을 지우고
+
+    actionForm.append(page);
+    actionForm.append(type);
+    actionForm.append(keyword);
+
+
+    actionForm
+            .attr("action", "/guestbook/list")
+            .attr("method","get");
+
+    actionForm.submit();
+
+  })
+
+
 </script>
 
 </html>
