--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -41,6 +41,21 @@
       <button type="button" class="btn btn-info">List</button>
     </a>
 
+    <div>
+      <div class="mt-4">
+        <h5><span class="badge badge-secondary replyCount">Repsly Count
+        [[${dto.replyCount]]</span></h5>
+      </div>
+      <div class="list-group replyList">
+
+      </div>
+    </div>
+
+    <script th:inline="javascript">
+
+
+    </script>
+
 
   </th:block>
 
