--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -41,9 +41,10 @@
       <button type="button" class="btn btn-info">List</button>
     </a>
 
+    <!--댓글용(추가, 갯수)-->
     <div>
       <div class="mt-4">
-        <h5><span class="badge badge-secondary replyCount">Repsly Count
+        <h5><span class="badge badge-secondary replyCount">댓글보기
         [[${dto.replyCount]]</span></h5>
       </div>
       <div class="list-group replyList">
@@ -51,8 +52,202 @@
       </div>
     </div>
 
-    <script th:inline="javascript">
+    <!--모달창-->
+    <div class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
 
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <input class="form-control" type="text" name="replyText" placeholder="Reply Text...">
+            </div>
+            <div class="form-group">
+              <input class="form-control" type="text" name="replyer" placeholder="Replyer..">
+              <input type="hidden" name="rno">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger replyRemove">Remove</button>
+            <button type="button" class="btn btn-warning replyModify">Modify</button>
+            <button type="button" class="btn btn-primary replySave">Save</button>
+            <button type="button" class="btn btn-outline-secondary replyClose" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Thymeleaf의 인라인 JavaScript 구문을 사용-->
+    <script th:inline="javascript">
+    //객체를 변수로 선언하면 자동으로 JSON 형태로 변경해줌
+      $(document).ready(function () {
+        var bno = [[${dto.bno}]];
+
+        var listGroup = $(".replyList"); // 'replyList' 클래스를 가진 모든 요소를 선택하고 변수에 저장
+
+        //'bno'와 관련된 게시물에 대한 답글을 가져오는 AJAX 요청을 수행하고, 그 결과를 콘솔에 출력
+        $(".replyCount").click(function () { //댓글보기 클릭 시
+          $.getJSON('/replies/board/' + bno, function (arr) {
+            console.log(arr);
+          });
+        })
+
+        /* 댓글 목록을 가져오는 기능은 여러 곳에서 사용할 수 있도록 별도의 함수로 분리!! */
+        //댓글이 추가될 영역
+        var listGroup = $(".replyList");
+
+        //날짜 처리를 위한 함수
+        function formatTime(str) {
+          var date = new Date(str);
+
+          return date.getFullYear() + '/' +
+                  (date.getMonth() + 1) + '/' +
+                  date.getDate() + ' ' +
+                  date.getHours() + ':' +
+                  date.getMinutes();
+        }
+
+        //특정한 게시글의 댓글을 처리하는 함수
+        //AJAX를 사용하여 JSON 데이터를 가져와서 해당 데이터를 HTML에 표시
+        function loadJSONData() {
+          $.getJSON('replies/board/' + bno, function (arr) {
+
+            console.log(arr);
+
+            var str = "";
+
+            $('.replyCount').html("Reply Count" + arr.length); //답글의 수를 나타내는 텍스트를 갱신
+
+            // 받은 JSON 데이터 배열 arr을 반복하여 각각의 답글 정보를 처리
+            $.each(arr, function (idx, reply) {
+              console.log(reply);
+              str += '   <div class="card-body" data-rno={"' + reply.rno + '"}><b>' + reply.rno + '</b>';
+              str += '   <h5 class="card-title">' + reply.text + '</h5>';
+              str += '   <h6 class="card-subtitle mb-2 text-muted">' + reply.replyer + '</h6>';
+              str += '   <p class="card-text">' + formatTime(reply.regDate) + '</p>';
+              str += '   </div>';
+            });
+
+            listGroup.html(str);
+
+          });
+        } // loadJSONData
+
+        $(".replyCount").click(function () {
+          loadJSONData();
+        }); //replyCount
+
+        /* 모달창 댓글 */
+        var modal = $('.modal');
+
+        $(".addReply").click(function () {
+          modal.modal('show');
+
+          //댓글 입력하는 부분 초기화
+          $('input[name="replyText"]').val('');
+          $('input[name="replyer"]').val('');
+
+          $(".modal-footer .btn").hide(); //모달 내의 모든 버튼을 안 보이도록
+          $(".replySave, .replyClose").show(); //필요한 버튼들만 보이도록
+        }); //addReply
+
+        $(".replySave").click(function () {
+
+          var reply = {
+            bno: bno,
+            text: $('input[name="replyText"]').val(),
+            replyer: $('input[name="replyer"]').val()
+          }
+          console.log(reply);
+
+          $.ajax({
+            url: '/replies/',
+            method: 'post',
+            data: JSON.stringify(reply),
+            contentType: 'application/json; charset=utf-8',
+            dataType: 'json',
+            success: function (data) {
+              console.log(data);
+
+              var newRno = parseInt(data);
+
+              alert(newRno + "번 댓글이 등록되었습니다.");
+              modal.modal('hide');
+              loadJSONData();
+            }
+
+          });
+
+        }); //replySave
+
+        $('.replyList').on("click", ".card-body", function () {
+          var rno = $(this).data("rno");
+
+          $("input[name='replyText']").val($(this).find('.card-title').html());
+          $("input[name='replyer']").val($(this).find('.card-subtitle').html());
+          $("input[name='rno']").val(rno);
+
+          modal.modal('show');
+
+        }); //replyList
+
+        $(".replyRemove").on("click", function () {
+          var rno = $("input[name='rno']").val(); //모달 창에 보이는 댓글 번호 hidden처리되어 있음
+
+          $.ajax({
+            url: '/replies/' + rno,
+            method: 'delete',
+
+            success: function(result){
+              console.log("result: " + result);
+              if(result ==='success'){
+                alert("댓글이 삭제되었습니다");
+                modal.modal('hide');
+                loadJSONData();
+              }
+            }
+          })
+
+        }); //replyRemove
+
+        $(".replyModify").click(function() {
+
+          var rno = $("input[name='rno']").val();
+
+          var reply = {
+            rno: rno,
+            bno: bno,
+            text: $('input[name="replyText"]').val(),
+            replyer: $('input[name="replyer"]').val()
+          }
+
+          console.log(reply);
+          $.ajax({
+            url: '/replies/' + rno,
+            method: 'put',
+            data:  JSON.stringify(reply),
+            contentType: 'application/json; charset=utf-8',
+            success: function(result){
+
+              console.log("RESULT: " + result);
+
+              if(result ==='success'){
+                alert("댓글이 수정되었습니다");
+                modal.modal('hide');
+                loadJSONData();
+              }
+            }
+
+          });
+
+        }); //replyModify
+
+      })
 
     </script>
 
